2007-11-26  Marcus D. Hanwell <marcus@cryos.org>

	* libavogadro/src/painter.h, libavogadro/src/glpainter.*,
	libavogadro/src/povpainter.h: Added new drawTriangle function that
	takes a normal as the fourth argument.

	* libavogadro/src/engines/ringengine.cpp: Calculate a normal and use it
	for the whole ring - improved lighting with no artifacts in each ring,
	still issues around turning points.

	* libavogadro/src/camera.*, libavogadro/src/povpainter.cpp,
	libavogadro/src/glpainter.cpp, libavogadro/src/tools/navigate.cpp,
	libavogadro/src/tools/manipulatetool.cpp,
	libavogadro/src/tools/eyecandy.cpp,
	libavogadro/src/tools/clickmeasuretool.cpp,
	libavogadro/src/tools/autorotatetool.cpp,
	libavogadro/src/engines/ringengine.cpp,
	libavogadro/src/engines/labelengine.cpp: Fixed the case of the back
	transformed axis functions and ported the existing code.

2007-11-20  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* avogadro/src/extensions/selectextension.cpp: Renamed extension
	for SMARTS selection. Added support for new options, such as
	invert selection. (More to come later, e.g., atom selection by
	name, residue by name, etc.)

2007-11-19  Marcus D. Hanwell <marcus@cryos.org>

	* libavogadro/src/glpainter.cpp: Improvements to the drawTriangle
	function - generate valid normals for the triangles.

	* libavogadro/src/engines/CMakeLists.txt,
	libavogadro/src/engines/polygonengine.*: Added a new polygon engine.
	Render certain structures as polygons.

2007-11-19  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* libavogadro/src/glpainter.cpp: Refinement of multiple bonds in
	wireframe view.

2007-11-18  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* libavogadro/src/painter.h, libavogadro/src/glpainter.h,
	libavogadro/src/povpainter.h, libavogadro/src/glpainter.cpp: Add
	drawMultiLine method for wireframe multiple bonds.

	* libavogadro/src/engines/wireengine.h,
	libavogadro/src/engines/wireengine.cpp,
	libavogadro/src/engines/wiresettingswidget.ui: